Linking the group in this .blend causes crash with this starting scene #34776

Closed
opened 2013-03-26 18:18:59 +01:00 by Harrison Nordby · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit nvidia 660ti

- Blender version with error, and version that worked ---

2.66a crashes
I don't know of any versions that work.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Start blender 2.66a with default settings.
  2. Open the attached "starting scene.blend"
  3. File --> Link the group "link me to crash blender" which is found inside "crash on link group.blend"
  4. Crash!

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit nvidia 660ti - Blender version with error, and version that worked --- 2.66a crashes I don't know of any versions that work. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Start blender 2.66a with default settings. 2. Open the attached "starting scene.blend" 3. File --> Link the group "link me to crash blender" which is found inside "crash on link group.blend" 4. Crash! %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Update:

There's another way to cause the crash; it has something to do with textures. Starting scene.blend isn't relevant. (As far as I can tell)

  1. Start blender 2.66a
  2. File --> Link the group "link me to crash blender" which is found inside "crash on link group.blend"
  3. Set Viewport shading to "Textured" OR turn on "Textured Solid" in the 'N' panel
  4. Crash!%%%
%%%Update: There's another way to cause the crash; it has something to do with textures. Starting scene.blend isn't relevant. (As far as I can tell) 1. Start blender 2.66a 2. File --> Link the group "link me to crash blender" which is found inside "crash on link group.blend" 3. Set Viewport shading to "Textured" OR turn on "Textured Solid" in the 'N' panel 4. Crash!%%%

%%%Further investigation reveals the true culprit! Here are the steps to repro with no custom blend files:

  1. Start blender 2.66a.
  2. Put the default cube object into a group.
  3. Put the default cube into EDIT mode.
  4. Save the .blend file.
  5. Start a new blend file.
  6. Link the group created in the previous blend file.
  7. Set Viewport shading to "Textured" OR turn on "Textured Solid" in the 'N' panel
  8. Crash

%%%

%%%Further investigation reveals the true culprit! Here are the steps to repro with no custom blend files: 1. Start blender 2.66a. 2. Put the default cube object into a group. 3. Put the default cube into EDIT mode. 4. Save the .blend file. 5. Start a new blend file. 6. Link the group created in the previous blend file. 7. Set Viewport shading to "Textured" OR turn on "Textured Solid" in the 'N' panel 8. Crash %%%

%%%fixed r55610.%%%

%%%fixed r55610.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34776
No description provided.