fix [#34776] Linking the group in this .blend causes crash with this starting scene

disallow linked objects to be in editmode.